# v_dumb_nn

./: .gitignore  CLAUDE.md  README.md  base_nn_layers.py  jax_nn_layers.py  pyproject.toml  requirements.txt
